--- a/sass/features/_gravity-forms.scss
+++ b/sass/features/_gravity-forms.scss
@@ -6,6 +6,10 @@
 
 // stylelint-disable
 #gform_wrapper_2 {
+  .gform_footer {
+    margin-top: 2rem;
+  }
+
   .gform_title {
     font-size: 18px;
     font-weight: var(--font-weight-semibold);
